aprimorando parametros das rotas na doc
